// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation renders 1`] = `
<styled.nav
  aria-label="Test navigation"
  data-cosmos-key="navigation"
  role="navigation"
>
  <styled.ul
    data-cosmos-key="navigation.group"
    description="Test navigation"
  >
    <NavigationItem
      onClick={[Function]}
    >
      <styled.div>
        Dashboard
      </styled.div>
    </NavigationItem>
  </styled.ul>
</styled.nav>
`;

exports[`Navigation renders empty 1`] = `
<styled.nav
  aria-label="Test navigation"
  data-cosmos-key="navigation"
  role="navigation"
>
  <styled.ul
    data-cosmos-key="navigation.group"
    description="Test navigation"
  />
</styled.nav>
`;

exports[`Navigation renders navigation groups 1`] = `
<styled.nav
  aria-label="Test navigation"
  data-cosmos-key="navigation"
  role="navigation"
>
  <styled.ul
    data-cosmos-key="navigation.group"
    description="Test navigation"
  >
    <NavigationGroup
      title="Group 1"
    >
      <NavigationItem
        onClick={[Function]}
      >
        <Icon
          color="default"
          name="apis"
          size={20}
        />
        <styled.div>
          Dashboard
        </styled.div>
      </NavigationItem>
      <NavigationItem
        onClick={[Function]}
      >
        <Icon
          color="default"
          name="apis"
          size={20}
        />
        <styled.div>
          Another
        </styled.div>
      </NavigationItem>
    </NavigationGroup>
    <NavigationGroup
      title="Group 2"
    >
      <NavigationItem
        onClick={[Function]}
      >
        <Icon
          color="default"
          name="apis"
          size={20}
        />
        <styled.div>
          Dashboard
        </styled.div>
      </NavigationItem>
      <NavigationItem
        onClick={[Function]}
      >
        <Icon
          color="default"
          name="apis"
          size={20}
        />
        <styled.div>
          Another
        </styled.div>
      </NavigationItem>
    </NavigationGroup>
  </styled.ul>
</styled.nav>
`;

exports[`Navigation renders with icon item 1`] = `
<styled.nav
  aria-label="Test navigation"
  data-cosmos-key="navigation"
  role="navigation"
>
  <styled.ul
    data-cosmos-key="navigation.group"
    description="Test navigation"
  >
    <NavigationItem
      onClick={[Function]}
    >
      <Icon
        color="default"
        name="apis"
        size={20}
      />
      <styled.div>
        Dashboard
      </styled.div>
    </NavigationItem>
  </styled.ul>
</styled.nav>
`;

exports[`Navigation renders with sub navigation 1`] = `
<styled.nav
  aria-label="Test navigation"
  data-cosmos-key="navigation"
  role="navigation"
>
  <styled.ul
    data-cosmos-key="navigation.group"
    description="Test navigation"
  >
    <NavigationItem
      onClick={[Function]}
    >
      <Icon
        color="default"
        name="apis"
        size={20}
      />
      <styled.div>
        Dashboard
      </styled.div>
      <NavigationSubnav>
        <NavigationItem>
          <styled.div>
            Test element
          </styled.div>
        </NavigationItem>
      </NavigationSubnav>
    </NavigationItem>
    <NavigationItem
      onClick={[Function]}
    >
      <Icon
        color="default"
        name="apis"
        size={20}
      />
      <styled.div>
        Another
      </styled.div>
    </NavigationItem>
  </styled.ul>
</styled.nav>
`;
